syntax = "proto3";
message ViewExtData {
    ViewFilter filter = 1;
    ViewGroup group = 2;
    ViewSort sort = 3;
}
message ViewFilter {
    oneof one_of_field_id { string field_id = 1; };
}
message ViewGroup {
    oneof one_of_group_field_id { string group_field_id = 1; };
    oneof one_of_sub_group_field_id { string sub_group_field_id = 2; };
}
message ViewSort {
    oneof one_of_field_id { string field_id = 1; };
}
message GridInfoChangesetPayload {
    string grid_id = 1;
    oneof one_of_filter { ViewFilter filter = 2; };
    oneof one_of_group { ViewGroup group = 3; };
    oneof one_of_sort { ViewSort sort = 4; };
}
